HelloParser.java
// Generated from Hello.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__22=1, T__21=2, T__20=3, T__19=4, T__18=5, T__17=6, T__16=7, T__15=8, 
		T__14=9, T__13=10, T__12=11, T__11=12, T__10=13, T__9=14, T__8=15, T__7=16, 
		T__6=17, T__5=18, T__4=19, T__3=20, T__2=21, T__1=22, T__0=23, INT=24, 
		DIGIT=25, UNDERSCORE=26, LETTER=27, ID=28, TYPE=29, ADD_MINUS=30, AND=31, 
		WS=32;
	public static final String[] tokenNames = {
		"<INVALID>", "'length'", "'new'", "'true'", "'System.out.println'", "';'", 
		"'while'", "'{'", "'['", "'='", "'}'", "']'", "'if'", "'>'", "'!'", "'int'", 
		"'else'", "'('", "')'", "'*'", "','", "'this'", "'.'", "'false'", "INT", 
		"DIGIT", "'_'", "LETTER", "ID", "TYPE", "ADD_MINUS", "'&&'", "WS"
	};
	public static final int
		RULE_bool = 0, RULE_t = 1, RULE_expr_neg = 2, RULE_expr_cmp = 3, RULE_expr_am = 4, 
		RULE_expr_time = 5, RULE_expr_and = 6, RULE_expr_arith = 7, RULE_array = 8, 
		RULE_expr_length = 9, RULE_expr_this = 10, RULE_expr_new = 11, RULE_expr_unit = 12, 
		RULE_expr_para = 13, RULE_expr = 14, RULE_stat = 15;
	public static final String[] ruleNames = {
		"bool", "t", "expr_neg", "expr_cmp", "expr_am", "expr_time", "expr_and", 
		"expr_arith", "array", "expr_length", "expr_this", "expr_new", "expr_unit", 
		"expr_para", "expr", "stat"
	};

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BoolContext extends ParserRuleContext {
		public Expr_cmpContext expr_cmp() {
			return getRuleContext(Expr_cmpContext.class,0);
		}
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitBool(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bool);
		try {
			setState(35);
			switch (_input.LA(1)) {
			case 3:
				enterOuterAlt(_localctx, 1);
				{
				setState(32); match(3);
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 2);
				{
				setState(33); match(23);
				}
				break;
			case 14:
			case 17:
			case INT:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(34); expr_cmp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TContext extends ParserRuleContext {
		public Expr_negContext expr_neg() {
			return getRuleContext(Expr_negContext.class,0);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public TerminalNode INT() { return getToken(HelloParser.INT, 0); }
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitT(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_t);
		try {
			setState(48);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37); match(INT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38); match(17);
				setState(39); expr_am();
				setState(40); match(18);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42); match(ID);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43); expr_neg();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44); match(17);
				setState(45); t();
				setState(46); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_negContext extends ParserRuleContext {
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_negContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_neg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_neg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_neg(this);
		}
	}

	public final Expr_negContext expr_neg() throws RecognitionException {
		Expr_negContext _localctx = new Expr_negContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr_neg);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(50); match(14);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(53); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(57);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(55); t();
				}
				break;

			case 2:
				{
				setState(56); expr_and();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_cmpContext extends ParserRuleContext {
		public TContext t(int i) {
			return getRuleContext(TContext.class,i);
		}
		public List<TContext> t() {
			return getRuleContexts(TContext.class);
		}
		public Expr_cmpContext expr_cmp() {
			return getRuleContext(Expr_cmpContext.class,0);
		}
		public Expr_cmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_cmp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_cmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_cmp(this);
		}
	}

	public final Expr_cmpContext expr_cmp() throws RecognitionException {
		Expr_cmpContext _localctx = new Expr_cmpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr_cmp);
		try {
			setState(67);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59); t();
				setState(60); match(13);
				setState(61); t();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63); match(17);
				setState(64); expr_cmp();
				setState(65); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_amContext extends ParserRuleContext {
		public List<TerminalNode> ADD_MINUS() { return getTokens(HelloParser.ADD_MINUS); }
		public TerminalNode ADD_MINUS(int i) {
			return getToken(HelloParser.ADD_MINUS, i);
		}
		public List<Expr_timeContext> expr_time() {
			return getRuleContexts(Expr_timeContext.class);
		}
		public Expr_timeContext expr_time(int i) {
			return getRuleContext(Expr_timeContext.class,i);
		}
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public Expr_amContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_am; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_am(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_am(this);
		}
	}

	public final Expr_amContext expr_am() throws RecognitionException {
		Expr_amContext _localctx = new Expr_amContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr_am);
		int _la;
		try {
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); expr_time();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ADD_MINUS) {
					{
					{
					setState(70); match(ADD_MINUS);
					setState(71); expr_time();
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77); match(17);
				setState(78); expr_am();
				setState(79); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_timeContext extends ParserRuleContext {
		public TContext t(int i) {
			return getRuleContext(TContext.class,i);
		}
		public List<TContext> t() {
			return getRuleContexts(TContext.class);
		}
		public Expr_timeContext expr_time() {
			return getRuleContext(Expr_timeContext.class,0);
		}
		public Expr_timeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_time(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_time(this);
		}
	}

	public final Expr_timeContext expr_time() throws RecognitionException {
		Expr_timeContext _localctx = new Expr_timeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr_time);
		int _la;
		try {
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); t();
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==19) {
					{
					{
					setState(84); match(19);
					setState(85); t();
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91); match(17);
				setState(92); expr_time();
				setState(93); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_andContext extends ParserRuleContext {
		public List<BoolContext> bool() {
			return getRuleContexts(BoolContext.class);
		}
		public TerminalNode AND(int i) {
			return getToken(HelloParser.AND, i);
		}
		public BoolContext bool(int i) {
			return getRuleContext(BoolContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(HelloParser.AND); }
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_andContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_and(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_and(this);
		}
	}

	public final Expr_andContext expr_and() throws RecognitionException {
		Expr_andContext _localctx = new Expr_andContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr_and);
		try {
			int _alt;
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); bool();
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(98); match(AND);
						setState(99); bool();
						}
						} 
					}
					setState(104);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); match(17);
				setState(106); expr_and();
				setState(107); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_arithContext extends ParserRuleContext {
		public Expr_andContext expr_and() {
			return getRuleContext(Expr_andContext.class,0);
		}
		public Expr_amContext expr_am() {
			return getRuleContext(Expr_amContext.class,0);
		}
		public Expr_arithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_arith; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_arith(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_arith(this);
		}
	}

	public final Expr_arithContext expr_arith() throws RecognitionException {
		Expr_arithContext _localctx = new Expr_arithContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr_arith);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111); expr_am();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112); expr_and();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public Expr_arithContext expr_arith() {
			return getRuleContext(Expr_arithContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_array);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(115); match(ID);
				setState(116); match(8);
				setState(117); expr_arith();
				setState(118); match(11);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 2);
				{
				setState(120); match(17);
				setState(121); array();
				setState(122); match(18);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_lengthContext extends ParserRuleContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public Expr_lengthContext expr_length() {
			return getRuleContext(Expr_lengthContext.class,0);
		}
		public Expr_lengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_length; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_length(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_length(this);
		}
	}

	public final Expr_lengthContext expr_length() throws RecognitionException {
		Expr_lengthContext _localctx = new Expr_lengthContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr_length);
		try {
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(126); array();
					}
					break;

				case 2:
					{
					setState(127); match(ID);
					}
					break;
				}
				setState(130); match(22);
				setState(131); match(1);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132); match(17);
				setState(133); expr_length();
				setState(134); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_thisContext extends ParserRuleContext {
		public Expr_thisContext expr_this() {
			return getRuleContext(Expr_thisContext.class,0);
		}
		public Expr_thisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_this; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_this(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_this(this);
		}
	}

	public final Expr_thisContext expr_this() throws RecognitionException {
		Expr_thisContext _localctx = new Expr_thisContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr_this);
		try {
			setState(143);
			switch (_input.LA(1)) {
			case 21:
				enterOuterAlt(_localctx, 1);
				{
				setState(138); match(21);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 2);
				{
				setState(139); match(17);
				setState(140); expr_this();
				setState(141); match(18);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_newContext extends ParserRuleContext {
		public Expr_arithContext expr_arith() {
			return getRuleContext(Expr_arithContext.class,0);
		}
		public Expr_newContext expr_new() {
			return getRuleContext(Expr_newContext.class,0);
		}
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public Expr_newContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_new; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_new(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_new(this);
		}
	}

	public final Expr_newContext expr_new() throws RecognitionException {
		Expr_newContext _localctx = new Expr_newContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr_new);
		try {
			setState(159);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145); match(2);
				setState(146); match(15);
				setState(147); match(8);
				setState(148); expr_arith();
				setState(149); match(11);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151); match(2);
				setState(152); match(ID);
				setState(153); match(17);
				setState(154); match(18);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155); match(17);
				setState(156); expr_new();
				setState(157); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_unitContext extends ParserRuleContext {
		public Expr_arithContext expr_arith() {
			return getRuleContext(Expr_arithContext.class,0);
		}
		public Expr_newContext expr_new() {
			return getRuleContext(Expr_newContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public Expr_thisContext expr_this() {
			return getRuleContext(Expr_thisContext.class,0);
		}
		public Expr_lengthContext expr_length() {
			return getRuleContext(Expr_lengthContext.class,0);
		}
		public Expr_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_unit(this);
		}
	}

	public final Expr_unitContext expr_unit() throws RecognitionException {
		Expr_unitContext _localctx = new Expr_unitContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expr_unit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(161); expr_arith();
				}
				break;

			case 2:
				{
				setState(162); array();
				}
				break;

			case 3:
				{
				setState(163); expr_length();
				}
				break;

			case 4:
				{
				setState(164); expr_this();
				}
				break;

			case 5:
				{
				setState(165); expr_new();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_paraContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public List<Expr_unitContext> expr_unit() {
			return getRuleContexts(Expr_unitContext.class);
		}
		public Expr_unitContext expr_unit(int i) {
			return getRuleContext(Expr_unitContext.class,i);
		}
		public Expr_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr_para(this);
		}
	}

	public final Expr_paraContext expr_para() throws RecognitionException {
		Expr_paraContext _localctx = new Expr_paraContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_expr_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); expr_unit();
			setState(169); match(22);
			setState(170); match(ID);
			setState(171); match(17);
			setState(180);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 3) | (1L << 14) | (1L << 17) | (1L << 21) | (1L << 23) | (1L << INT) | (1L << ID))) != 0)) {
				{
				setState(172); expr_unit();
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==20) {
					{
					{
					setState(173); match(20);
					setState(174); expr_unit();
					}
					}
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(182); match(18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr_paraContext expr_para() {
			return getRuleContext(Expr_paraContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_unitContext expr_unit() {
			return getRuleContext(Expr_unitContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_expr);
		try {
			setState(190);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(184); expr_unit();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(185); expr_para();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(186); match(17);
				setState(187); expr();
				setState(188); match(18);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode ID() { return getToken(HelloParser.ID, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_stat);
		try {
			setState(229);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(192); match(7);
				setState(193); stat();
				setState(194); match(10);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(196); match(12);
				setState(197); match(17);
				setState(198); expr();
				setState(199); match(18);
				setState(200); stat();
				setState(201); match(16);
				setState(202); stat();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(204); match(6);
				setState(205); match(17);
				setState(206); expr();
				setState(207); match(18);
				setState(208); stat();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(210); match(4);
				setState(211); match(17);
				setState(212); expr();
				setState(213); match(18);
				setState(214); match(5);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(216); match(ID);
				setState(217); match(9);
				setState(218); expr();
				setState(219); match(5);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(221); match(ID);
				setState(222); match(8);
				setState(223); expr();
				setState(224); match(11);
				setState(225); match(9);
				setState(226); expr();
				setState(227); match(5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}